--- a/HTML/estilos.css
+++ b/HTML/estilos.css
@@ -1,6 +1,18 @@
+body {
+    font-family: sans-serif;
+}
+
 ins {
     font-size: 150%;
     color: red;
     margin-right: 10px;
     text-decoration: none;
+}
+
+del {
+    margin-right: 10px;
+}
+
+.porcentaje {
+    color: red
 }
