--- a/HTML/css/estilos.css
+++ b/HTML/css/estilos.css
@@ -20,3 +20,12 @@ del {
 table, td, th {
     border: 1px solid black;
 }
+
+td, th {
+    padding: 5px;
+    text-align: center;
+}
+
+td:nth-child(3) {
+    width: 15%;
+}
