--- a/Angular/productos/src/app/app.component.html
+++ b/Angular/productos/src/app/app.component.html
@@ -1,1 +1,6 @@
-<span>{{ title }} app is running!</span>
+<div class="container">
+    <h1>
+      {{title}}
+    </h1>
+    <products-page></products-page>
+  </div>
