--- a/Angular/angular-products/src/app/products-page/products-page.component.html
+++ b/Angular/angular-products/src/app/products-page/products-page.component.html
@@ -2,20 +2,30 @@
     <div class="card-header bg-primary text-white">
         Mi lista de productos
     </div>
-    <div class="card-block">
-        <div class="table-responsive">
-            <table class="table table-striped m-0">
-                <thead>
-                    <tr>
-                        <th>Productos</th>
-                        <th>Precio</th>
-                        <th>Disponible</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Por ahora vacío. Aquí van los productos -->
-                </tbody>
-            </table>
-        </div>
+    <div class="card-body">
+        @if (products.length) {
+            <div class="table-responsive">
+                <table class="table table-striped m-0">
+                    <thead>
+                        <tr>
+                            <th>Productos</th>
+                            <th>Precio</th>
+                            <th>Disponibles</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (product of products; track product.id) {
+                            <tr>
+                                <td>{{product.description}}</td>
+                                <td>{{product.price}}</td>
+                                <td>{{product.available}}</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        } @else {
+            <h3 class="p-4">No hay productos disponibles</h3>
+        }
     </div>
 </div>
