--- a/Angular/angular-products/src/app/products-page/products-page.component.html
+++ b/Angular/angular-products/src/app/products-page/products-page.component.html
@@ -8,6 +8,7 @@
                 <table class="table table-striped m-0">
                     <thead>
                         <tr>
+                            <th>Imagen</th>
                             <th>Productos</th>
                             <th>Precio</th>
                             <th>Disponibles</th>
@@ -16,6 +17,7 @@
                     <tbody>
                         @for (product of products; track product.id) {
                             <tr>
+                                <td><img [src]="product.imageUrl" alt=""></td>
                                 <td>{{product.description}}</td>
                                 <td>{{product.price}}</td>
                                 <td>{{product.available}}</td>
