Añadidos iconos de bootstrap, y usado icono del ojo en la tabla de productos

--- a/Angular/angular-products/src/app/products-page/products-page.component.html
+++ b/Angular/angular-products/src/app/products-page/products-page.component.html
@@ -55,11 +55,15 @@
                             <th>
                                 <button class="btn btn-sm" 
                                     [ngClass]="{
-                                        'btn-danger': this.showImage,
-                                        'btn-primary': !this.showImage,
+                                        'btn-primary': showImage,
+                                        'btn-danger': !showImage,
                                     }"
                                     (click)="toggleImage()">
-                                    {{showImage?'Ocultar':'Mostrar'}} imágenes
+
+                                    <i class="bi bi-image me-3"></i>
+
+                                    <i [class.d-none]="showImage" class="bi bi-eye"></i>
+                                    <i [class.d-none]="!showImage" class="bi bi-eye-slash"></i> 
                                 </button>
                             </th>
                             <th>Productos</th>
