--- a/Angular/Parte 2/angular-products/src/app/products-page/products-page.component.css
+++ b/Angular/Parte 2/angular-products/src/app/products-page/products-page.component.css
@@ -1,11 +1,6 @@
-td {
-    vertical-align: middle;
-
-    img {
-        height: 40px;
-    }
-}
-
-.product-img {
-    max-height: 200px;
+.headers {
+  font-weight: bold;
+  border-bottom: 1px solid #CCC;
+  border-top: 1px solid #CCC;
+  padding: 5px;
 }
