--- a/Angular/Parte 2/angular-products/src/app/products-page/products-page.component.html
+++ b/Angular/Parte 2/angular-products/src/app/products-page/products-page.component.html
@@ -1,70 +1,4 @@
-<div class="card mb-4">
-  <div class="card-header bg-success text-white">
-    <i class="bi bi-bag-plus"></i> Añadir producto
-  </div>
-  <div class="card-body">
-    <form (ngSubmit)="addProduct(productForm)" #productForm="ngForm">
-      <label class="mb-3 row">
-        <span class="col-sm-2 col-form-label text-sm-end">Descripción</span>
-        <div class="col-sm-10">
-          <input
-            type="text"
-            class="form-control"
-            name="description"
-            [(ngModel)]="newProduct.description"
-          />
-        </div>
-      </label>
-      <label class="mb-3 row">
-        <span class="col-sm-2 col-form-label text-sm-end">Precio</span>
-        <div class="col-sm-10">
-          <input
-            type="number"
-            class="form-control"
-            name="price"
-            [(ngModel)]="newProduct.price"
-          />
-        </div>
-      </label>
-      <label class="mb-3 row">
-        <span class="col-sm-2 col-form-label text-sm-end">Disponibilidad</span>
-        <div class="col-sm-10">
-          <input
-            type="date"
-            class="form-control"
-            name="available"
-            [(ngModel)]="newProduct.available"
-          />
-        </div>
-      </label>
-      <label class="mb-3 row">
-        <span class="col-sm-2 col-form-label text-sm-end">Imagen</span>
-        <div class="col-sm-10">
-          <input
-            type="file"
-            class="form-control"
-            accept="image/*"
-            (change)="changeImage($event)"
-            name="fileName"
-            [(ngModel)]="fileName"
-          />
-        </div>
-      </label>
-      @if (newProduct.imageUrl) {
-      <div class="row mb-3">
-        <div class="col-sm-10 offset-sm-2">
-          <img class="product-img" [src]="newProduct.imageUrl" alt="" />
-        </div>
-      </div>
-      }
-      <div class="mb-3 row">
-        <div class="offset-sm-2 col-sm-10">
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
+<product-form (add)="addProduct($event)"></product-form>
 
 <div class="card mb-5">
   <div class="card-header bg-primary text-white">
@@ -73,57 +7,39 @@
   <div class="card-body">
     <div class="row">
       <div class="col-sm-6">
-        <input type="text" [(ngModel)]="search" class="form-control" placeholder="Filter..." />
+        <input
+          type="text"
+          [(ngModel)]="search"
+          class="form-control"
+          placeholder="Filter..."
+        />
       </div>
-      <div class="col-form-label col-sm-6">
-        Filtered by: {{ search() }}
-      </div>
+      <div class="col-form-label col-sm-6">Filtered by: {{ search() }}</div>
     </div>
 
     @if (filteredProducts().length) {
-    <div class="table-responsive">
-      <table class="table table-striped m-0">
-        <thead>
-          <tr>
-            <th>
-              <button
-                class="btn btn-sm"
-                [ngClass]="{
-                    'btn-primary': showImage(),
-                    'btn-danger': !showImage(),
-                }"
-                (click)="toggleImage()"
-              >
-                <i [class.d-none]="showImage()" class="bi bi-eye"></i>
-                <i [class.d-none]="!showImage()" class="bi bi-eye-slash"></i>
-              </button>
-            </th>
-            <th>Productos</th>
-            <th>Precio</th>
-            <th>Disponibles</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (product of filteredProducts(); track product.id) {
-          <tr>
-            <td>
-              <img
-                [class.d-none]="!showImage()"
-                [src]="product.imageUrl"
-                alt=""
-                [title]="product.description | uppercase"
-              />
-            </td>
-            <td>{{ product.description }}</td>
-            <td>{{ product.price | intlCurrency:'EUR':'es-ES' }}</td>
-            <td>{{ product.available | date:'dd/MM/yyyy' }}</td>
-            <td><button (click)="deleteProduct(product)" class="btn btn-danger btn-sm fw-bold">X</button></td>
-          </tr>
-          }
-        </tbody>
-      </table>
-    </div>
+      <div class="row headers g-0">
+        <div class="col-auto" style="width: 4em">
+          <button
+            class="btn btn-sm"
+            [ngClass]="{
+                'btn-primary': showImage(),
+                'btn-danger': !showImage(),
+            }"
+            (click)="toggleImage()"
+          >
+            <i [class.d-none]="showImage()" class="bi bi-eye"></i>
+            <i [class.d-none]="!showImage()" class="bi bi-eye-slash"></i>
+          </button>
+        </div>
+        <div class="col-4 my-auto">Producto</div>
+        <div class="col my-auto">Precio</div>
+        <div class="col my-auto">Disponible</div>
+        <div class="col-auto" style="width: 2em"></div>
+      </div>
+      @for (product of filteredProducts(); track product.id) {
+        <product-item [product]="product" [showImage]="showImage()" (delete)="deleteProduct(product)" class="row g-0" />
+      }
     } @else {
     <h3 class="p-4">No hay productos disponibles</h3>
     }
