--- a/Angular/chistes/src/app/pagina-chistes/pagina-chistes.component.html
+++ b/Angular/chistes/src/app/pagina-chistes/pagina-chistes.component.html
@@ -1,3 +1,3 @@
-<h1>Chistes de programadores</h1>
+<h1>Pulsa el botón para obtener un chiste nuevo</h1>
 <p>{{chiste()}}</p>
 <button (click)="obtenerChiste()">Obtener chiste</button>
