--- a/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
+++ b/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
@@ -1,5 +1,15 @@
 <h1>Películas populares</h1>
-@for (pelicula of peliculas(); track pelicula.id) {
-    <p>{{ pelicula.title }}</p>
-    <p><img src="https://image.tmdb.org/t/p/w200/{{pelicula.poster_path}}"></p>
-}
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+    @for (pelicula of peliculas(); track pelicula.id) {
+        <div class="col">
+            <div class="card">
+                <img src="https://image.tmdb.org/t/p/w200/{{pelicula.poster_path}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ pelicula.title }}</h5>
+                    <p class="card-text">{{ pelicula.overview }}</p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
