--- a/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
+++ b/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
@@ -1,6 +1,6 @@
 <h1>Películas populares</h1>
 
-<div class="row row-cols-1 row-cols-md-2 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4">
     @for (pelicula of peliculas(); track pelicula.id) {
         <div class="col">
             <div class="card">
@@ -8,6 +8,21 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ pelicula.title }}</h5>
                     <p class="card-text">{{ pelicula.overview }}</p>
+                </div>
+                <div class="card-footer">
+                    <span class="text-body-secondary">
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {{ pelicula.vote_average }}
+                        <i class="bi bi-calendar text-success ms-3"></i>
+                        {{ pelicula.release_date }} 
+
+                        <span class="ms-3">&lt; 18</span>
+                        @if (pelicula.adult) {
+                            <i class="bi bi-exclamation-circle"></i>
+                        } @else {
+                            <i class="bi bi-hand-thumbs-up"></i>
+                        }
+                    </span>
                 </div>
             </div>
         </div>
