--- a/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
+++ b/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
@@ -1,5 +1,32 @@
 <h1>Películas populares</h1>
 
+<div id="carousel" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        @for (pelicula of peliculas(); track pelicula.id) {
+            <div class="carousel-item @if ($first) active @endif">
+                <img src="https://image.tmdb.org/t/p/w200/{{pelicula.backdrop_path}}" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
     @for (pelicula of peliculas(); track pelicula.id) {
         <div class="col">
