--- a/Angular/pokemons/src/app/pagina-pokemons/pagina-pokemons.component.html
+++ b/Angular/pokemons/src/app/pagina-pokemons/pagina-pokemons.component.html
@@ -1,3 +1,5 @@
-@for (pokemon of pokemons(); track pokemon.url) {
-    <p>{{pokemon.name}}</p>
-}
+<ul class="list-group my-3">
+    @for (pokemon of pokemons(); track pokemon.url) { 
+        <li class="list-group-item list-group-item-primary">{{pokemon.name}}</li>
+    }
+</ul>
