--- a/Angular/pokemons/src/app/pagina-pokemons/pagina-pokemons.component.html
+++ b/Angular/pokemons/src/app/pagina-pokemons/pagina-pokemons.component.html
@@ -1,5 +1,7 @@
+<!--<img [src]="pokemon().sprites.front_default">-->
+
 <ul class="list-group my-3">
     @for (pokemon of pokemons(); track pokemon.url) { 
-        <li class="list-group-item list-group-item-primary">{{pokemon.name}}</li>
+        <li class="list-group-item list-group-item-primary" (click)="obtenerDetallesPokemon(pokemon.url)">{{pokemon.name}}</li>
     }
 </ul>
