--- a/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
+++ b/Angular/peliculas/src/app/pagina-peliculas/pagina-peliculas.component.html
@@ -1,18 +1,17 @@
 <h1>Películas populares</h1>
 
-<div id="carousel" class="carousel slide">
+<div id="carousel" class="carousel slide mt-1 mb-3">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        @for (pelicula of peliculas(); track pelicula.id; let i = $index, first = $first) {
+            <button type="button" data-bs-target="#carousel" [attr.data-bs-slide-to]="i" [class.active]="first"></button>
+        }
     </div>
     <div class="carousel-inner">
-        @for (pelicula of peliculas(); track pelicula.id) {
-            <div class="carousel-item @if ($first) active @endif">
-                <img src="https://image.tmdb.org/t/p/w200/{{pelicula.backdrop_path}}" class="d-block w-100" alt="...">
+        @for (pelicula of peliculas(); track pelicula.id; let i = $index, first = $first) {
+            <div class="carousel-item" [class.active]="first">
+                <img src="https://image.tmdb.org/t/p/w500/{{pelicula.backdrop_path}}" class="d-block w-100 rounded">
                 <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                    <h2>{{ pelicula.title }}</h2>
                 </div>
             </div>
         }
