Dividir ejemplo eventos en páginas

--- a/Angular/Parte 4/angular-eventos/src/app/app.component.html
+++ b/Angular/Parte 4/angular-eventos/src/app/app.component.html
@@ -1,9 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">{{title}}</a>
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/events']"
+          [routerLinkActive]="['active']"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          Eventos
+        </a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/events', 'add']"
+          [routerLinkActive]="['active']"
+        >
+          Nuevo evento
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
 
 <div class="container">
-  <events-page></events-page>
+  <router-outlet></router-outlet>
 </div>
