Imagen de fondo en la aplicación del tiempo

--- a/Angular/tiempo/src/app/pagina-tiempo/pagina-tiempo.component.html
+++ b/Angular/tiempo/src/app/pagina-tiempo/pagina-tiempo.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="buscar(productForm)" #productForm="ngForm" class="mt-3">
     <div class="input-group border-success">
         <span class="input-group-text" id="ubicacion"><i class="bi bi-map"></i></span>
-        <input type="text" class="form-control" placeholder="Introduce una ubicación..." aria-label="ubicacion" aria-describedby="ubicacion" name="ubicacion" [(ngModel)]="ubicacion">
+        <input type="search" class="form-control" placeholder="Introduce una ubicación..." aria-label="ubicacion" aria-describedby="ubicacion" name="ubicacion" [(ngModel)]="ubicacion">
     </div>
 </form>
 
