--- a/Angular/tiempo/src/styles.css
+++ b/Angular/tiempo/src/styles.css
@@ -1,3 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/dist/css/bootstrap.css";
 @import "bootstrap-icons/font/bootstrap-icons.min.css";
+
+body {
+    background-image: url('/giphy.gif');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
